<resources>
    <string name="app_name">Te Vi na UFMS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="criar_ln_conta">Criar \nConta</string>
    <string name="login">Login</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_a_senha">Esqueceu a Senha?</string>
    <string name="novo_aqui_criar_conta">Novo Aqui? Criar Conta</string>
    <string name="user_nome">Nome</string>
    <string name="_2h">2h</string>
    <string name="_100_likes">100 Likes</string>
    <string name="ol_eu_estou_usando_te_vi_na_ufms">Olá eu estou usando Te Vi na UFMS</string>
    <string name="seguidores">Seguidores</string>
    <string name="seguindo">Seguindo</string>
    <string name="posts">Posts</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="postar">Postar</string>
</resources>