<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CriarContaFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="78dp"
        android:text="@string/criar_ln_conta"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/nomeEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/text_box"
            android:hint="@string/nome"/>
        <EditText
            android:id="@+id/emailEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/text_box"
            android:hint="@string/e_mail"/>
        <EditText
            android:id="@+id/senhaEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/text_box"
            android:hint="@string/senha"/>

        <EditText
            android:id="@+id/confirmaSenhaEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/text_box"
            android:hint="@string/confirmar_senha"/>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barraDeProgresso"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll1"
        android:visibility="gone"
        android:layout_above="@id/criarContaBtn"/>
    <Button
        android:id="@+id/criarContaBtn"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginTV"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/btn_bg"
        android:text="@string/criar_conta"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/loginTV"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:text="Voltar para o Login"
        android:textStyle="bold"
        android:textColor="@color/material_dynamic_primary0"/>


</RelativeLayout>