<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="78dp"
        android:text="@string/entrar"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/emailEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/text_box"
            android:hint="@string/e_mail"/>
        <EditText
            android:id="@+id/senhaEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/text_box"
            android:hint="@string/senha"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esqueceu_a_senha"
            android:textColor="@color/purple_700"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            android:id="@+id/esqueceuSenhaTV"
            android:layout_marginRight="16dp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/barraDeProgresso"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_above="@id/loginBtn"
        android:layout_below="@+id/ll1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cadastroTV"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/btn_bg"
        android:text="@string/entrar"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/googleLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginBtn"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/btn_bg"
        android:text="@string/entrar"
        android:textColor="@color/white" />
    <TextView
        android:id="@+id/cadastroTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="Novo Aqui? Criar Conta"
        android:textColor="@color/material_dynamic_primary0"
        android:textStyle="bold" />


</RelativeLayout>