<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Perfil">

    <androidx.appcompat.widget.Toolbar
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/white"
        android:elevation="2dp"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:text="@string/nome"
                android:id="@+id/toolbarNameTv"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/userMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="12dp"
                android:contentDescription="@null"
                android:background="@drawable/ic_baseline_menu_24"/>


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/imagemPerfil"
            app:civ_border_color="#76d1fa"
            app:civ_border_width="1dp"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_margin="14dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/nomeTV"
                    android:text="@string/nome"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:id="@+id/statusTv"
                    android:text="@string/ol_eu_estou_usando_te_vi_na_ufms"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </LinearLayout>
     </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="250"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seguindo"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="25k"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seguidores"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2k"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/posts"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>